--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.7.9",
     "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hash-link": "^1.0.2",
     "react-router-dom": "^7.1.5",
+    "react-router-hash-link": "^2.4.3",
     "sass": "^1.83.4"
   },
   "devDependencies": {
