--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hash-link": "^1.0.2",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
     "react-router-hash-link": "^2.4.3",
     "sass": "^1.83.4"
