--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "axios": "^1.7.9",
     "express": "^4.21.2",
     "framer-motion": "^12.5.0",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hash-link": "^1.0.2",
+    "react-i18next": "^15.5.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
     "react-router-hash-link": "^2.4.3",
